# concord

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
concord-cli/: Cargo.toml
concord-cli/src/: cdn.rs  fmt.rs  key.rs  lib.rs  limiter.rs  main.rs  pull.rs  push.rs  resume.rs
concord-cli/tests/: push_pull_e2e.rs  verify_e2e.rs
concord-core/: Cargo.toml
concord-core/src/: chunker.rs  lib.rs  manifest.rs  shard.rs  sign.rs  store.rs
concord-store-s3/: Cargo.toml
concord-store-s3/src/: client.rs  lib.rs  sigv4.rs
docs/superpowers/plans/: 2026-06-16-resumable-pull.md  2026-06-17-quantization-metadata.md
docs/superpowers/specs/: 2026-06-16-cli-downloader-resume-design.md  2026-06-17-quantization-metadata-design.md
