[package]
name        = "concord-cli"
description = "Concord — CLI for the Concordfaces federated model registry. push / pull / verify / sign manifests."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "concord"
path = "src/main.rs"

[dependencies]
concord-core     = { path = "../concord-core",     version = "0.1.0" }
concord-store-s3 = { path = "../concord-store-s3", version = "0.1.0" }

indicatif          = "0.17"
anyhow             = { workspace = true }
async-trait        = { workspace = true }
base64             = { workspace = true }
bytes              = { workspace = true }
clap               = { workspace = true }
ed25519-dalek      = { workspace = true }
hex                = { workspace = true }
time               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }

[dev-dependencies]
tempfile = "3"
