[package]
name        = "concord-core"
description = "Core types for the Concordfaces protocol — chunker, manifest, signing, verification."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow         = { workspace = true }
async-trait    = { workspace = true }
blake3         = { workspace = true }
bytes          = { workspace = true }
ed25519-dalek  = { workspace = true }
rand_core      = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = { workspace = true }
thiserror      = { workspace = true }
base64         = { workspace = true }
hex            = { workspace = true }
time           = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true }
