[package]
name        = "concord-store-s3"
description = "S3-backed `Store` impl for Concordfaces — talks SigV4 to a CloudVerve (or any S3-compatible) gateway."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
concord-core   = { path = "../concord-core", version = "0.1.0" }

anyhow         = { workspace = true }
async-trait    = { workspace = true }
bytes          = { workspace = true }
hex            = { workspace = true }
hmac           = { workspace = true }
reqwest        = { workspace = true }
sha2           = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tracing        = { workspace = true }
url            = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true }
